# termux-packages

./: .cirrus.yml  .directory  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .travis.yml  AGENTS.md  BACKERS.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Gemfile  LICENSE.md  Learner  Makefile.in.patch  READM.md  README.md  Rakefile  SECURITY.md  Termux  Termuxxxhack  WALSY  a.out  boss143boss  bot  browser.py  build-all.sh  build-package.sh  build.sh  buildorder.py  check-versions.sh  clean-rebuild-all.sh  clean.sh  com_neonide_studio.patch  config.py  conftest  detect-hardlinks.sh  editor.py  fix-names.sh  (+16 more)
.gemini/: settings.json
.github/: FUNDING.yml  dependabot.yml  stale.yml
Anglemmj7/: termux-packages
Pack-error/: Term
docs/: BUILD.md  BUILD_ENVIRONMENT.md  DOCKER.md  FORMAT.md  README.md  RESOURCES.md  Readme.md  UTILITIES.md  buildorder.md  index.md  t.md
hexedit/: build.sh
ledger/: build.sh
licenses/: termux__termux-packages__Apache-2.0.md  termux__termux-packages__MIT.md
lite-ide/: build.sh  config.py  editor.py  main.py  ui.py
ndk-patches/: 25b  arpa-ftp.patch  asm-generic-termbits.h.patch  bits-ioctl.h.patch  bits-struct_file.h.patch  cmath.cpppatch  cstddef.cpppatch  dirent.h.patch  elf.h  grp.h.patch  iconv.h  ifaddrs.h  langinfo.h  langinfo.h.patch  libintl.h  limits.h.patch  linux-fcntl.h  linux-fcntl.h.patch  mntent.h.patch  paths.h.patch  pty.h.patch  pwd.h.patch  redefine-TCSAFLUSH.patch  route.h.patch  spawn.h.patch  stdio.h.patch  stdlib.h.patch  string.h.patch  sys-cdefs.h.patch  sys-select.h.patch  sys-ttydefault.h.patch  sys-wait.h.patch  syscall.h.patch  (+4 more)
x11-packages/chromium/third_party_override/swiftshader/src/Vulkan/: BUILD.gn  vulkan.gni
x11-packages/electron-for-code-oss/third_party_override/swiftshader/src/Vulkan/: BUILD.gn
(+6008 files in other folders)
